# fuzzy-rough-learn

./: .buildinfo  .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  Examples_of_fuzzy_quantifiers  Examples_of_quantifiers.py  LICENSE  MANIFEST.in  Makefile  README.rst  api.html  appveyor.yml  changelog.html  fuzzy_quantifiers.py  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/: dependabot.yaml
.github/workflows/: deploy-gh-pages.yaml  documentation.yaml  python-app.yaml  tests.yaml
_downloads/2c859b558d38d85584a01341b89eff07/: frps.ipynb
_downloads/3000620b312655f3173d57e047e05aeb/: one_class_classification.py
_downloads/506285caf4a19411323803f541c218f9/: frnn.py
_downloads/635d6fffb3b004ed26dc94708cb81b30/: frfs.ipynb
_downloads/88a6facc61c5842a5cd71b3e9e88512f/: fronec.py
_downloads/a19665bc2be1ad387d0fcf1f79048cd4/: frps.py
_downloads/b563ba145ce0d25c85baabebb23b3199/: nn.ipynb
_downloads/b773a26442e1ed797971624c57d62012/: frovoco.ipynb
_downloads/bd5954052f60fd44b2f39a0f6c30bcc7/: frfs.py
_downloads/c1047d33086df67024af7e5f64b3755a/: fronec.ipynb
_downloads/cdaed3317922710d10246d939a40c856/: one_class_classification.ipynb
_downloads/f6045b5fd3594aaff3798a86c6bbf517/: frnn.ipynb
_sources/: api.rst.txt  changelog.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/changelog/: 0.2.2.rst.txt
_sources/examples/: index.rst.txt
build_tools/travis/: install.sh  script.sh
changelog/: 0.0.0.html  0.1.0.html  0.2.0.html  0.2.1.html  0.2.2.html  0.3.0.html
doc/: Makefile  api.rst  changelog.rst  conf.py  index.rst  requirements_rtd.txt
doc/_templates/: class.rst
doc/changelog/: 0.0.0.rst  0.1.0.rst  0.2.0.rst  0.2.1.rst  0.3.0.rst
examples/: README.txt  Update examples of fuzzy quantifiers  Update examples of fuzzy quantifiers.py  index.html  sg_execution_times.html
examples/classifiers/: README.txt  frnn.html  frnn.py  fronec.html  frovoco.html  frovoco.py  index.html  nn.html  nn.py  (+4 more)
frlearn/: __init__.py  array_functions.py  base.py  classifiers.py  data_descriptors.py  dispersion_measures.py  dissimilarity_measures.py  feature_preprocessors.py  instance_preprocessors.py  location_measures.py  neighbour_search_methods.py  numpy.py  parametrisations.py  preprocessors.py  regressors.py  t_norms.py  transformations.py  vector_size_measures.py  weights.py
(+105 files in other folders)
